--- a/static/app/index.html
+++ b/static/app/index.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="lib/angular-ui-0.4.0/build/angular-ui.min.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="lib/angular-ui-grid/ng-grid.css" />
+	<link rel="stylesheet" href="css/jquery-ui-1.10.2.custom.min.css" />
 	<script src="lib/jquery/jquery-1.9.1.min.js"></script> 
+	<script src="lib/jqueryui/jquery-ui-1.10.2.custom.min.js"></script> 
+	<script src="lib/jqueryui/jquery.ui.datepicker-zh-CN.js"></script> 
   </head>
   <body style='height:100%;overflow:hidden'>
   <div ng-view="" style='height:100%'></div>
